miniextendr-macros/tests/ui/fn_dots_not_last.stderr
error[E0308]: mismatched types
 --> tests/ui/fn_dots_not_last.rs:9:11
  |
9 | fn bad_fn(dots: &Dots, x: i32) -> i32 {
  |    ------ ^^^^ expected `Dots`, found `miniextendr_api::dots::Dots`
  |    |
  |    arguments to this function are incorrect
  |
  = note: `miniextendr_api::dots::Dots` and `Dots` have similar names, but are actually distinct types
note: `miniextendr_api::dots::Dots` is defined in crate `miniextendr_api`
 --> $WORKSPACE/miniextendr-api/src/dots.rs
  |
  | pub struct Dots {
  | ^^^^^^^^^^^^^^^
note: `Dots` is defined in the current crate
 --> tests/ui/fn_dots_not_last.rs:6:1
  |
6 | struct Dots;
  | ^^^^^^^^^^^
note: function defined here
 --> tests/ui/fn_dots_not_last.rs:9:4
  |
9 | fn bad_fn(dots: &Dots, x: i32) -> i32 {
  |    ^^^^^^ -----------

warning: unused variable: `dots`
 --> tests/ui/fn_dots_not_last.rs:9:11
  |
9 | fn bad_fn(dots: &Dots, x: i32) -> i32 {
  |           ^^^^ help: if this is intentional, prefix it with an underscore: `_dots`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
